<resources>
    <string name="lambscewers_name">Lamb Scewers</string>
    <string name="lambscewers_ingreds">Ingredients: \n1. 2 lbs of lamb leg meat at least 15% fat\n2. 2 cups of onion slices\n3. 4-5 cloves of crushed garlic\n4. 1.5 tbsp of cumin seeds\n5. 2 tsp of Sichuan peppercorn\n6. 1 tsp of white pepper\n7. 1 tsp of white pepper\n8. 2.5 tbsp mild chili flake optional\n9. 1 tsp of spicy chili flake optional\n10.2 to 3 tsp of salt or taste
    \n
    \nDirections:\n1. Lamb shoulder and leg are the best cut for making bbq skewers because you can get some large chunks of meat out of them. Cut the lamb into 1-inch size pieces. Don’t cut it too small or else it will dry out quickly while grilling.
\n\n2. Marinade the lamb meat with 2 cups of onion slices and 4 cloves of crushed garlic. Cover it and let it sit for 40 minutes. This is to help gentle some off that strong lamb smell. Also, the enzyme in the onion can tenderize the meat. I have seen people use onion puree instead of the slices. That way the meat will be a bit too wet. When you put wet meat onto a hot grill, it will stick on the grill.
\n\n3. While waiting, you can make the spice powder. Toast 1.5 tbsp of cumin seeds, 2 tsp of Sichuan peppercorn, a tsp of fennel seeds, a tsp of white peppercorn in a cast-iron skillet for 3-5 minutes. Then blend into a fine powder. I always prefer a freshly ground spice mix. It makes a huge difference in taste.
\n\n4. To spice up my BBQ, I also like to use some red chili flake. To get the spicy level that I like, I will mix some mild chili flake with some face heaven chili powder.
\n\n5. Besides that, you will need some salt which we will sprinkle it on while you are grilling.
\n\n6. Put the lamb onto the skewers. Set your grill at high temperature. The thermometer attachment on my grill shows it reaches 500 F. If the temperature is too low, it will take much longer to chared the meat and there is a higher chance that the lamb will be dried out.
\n\n7. Sprinkle some salt. Be generous because some of the salt might fall off while cooking and turning. I will say for 2 pounds of meat, you will need about 2-3 tsp of salt.
\n\n8. It will take a few minutes on each side for it to charred. Once both sides have that nice color, the meat is about medium-rare. The way I like is medium-well so I lower the distance of the charcoal. Let the meat cook for a few minutes more. Keep turning until it reaches the desired color or the doneness that you like.
\n\n9. Once you think it is almost done, you can sprinkle the spice mix and chili flake onto the meat. Take the meat off the grill and enjoy!</string>
    <string name="lambscewers_servings">Servings: 4</string>
    <string name="lambscewers_servingsize">Serving Size: 1 scewer</string>
    <string name="lambscewers_calories">Calories: 300</string>
    <string name="lambscewers_time">Time: 75 minutes</string>
    <string name="halibut_name">Roasted Halibut</string>
    <string name="halibut_ingreds">Ingredients:\n1. 2(8-ounce) halibut fillets, preferably at least 1-inch thick
\n2. 1½teaspoons extra virgin olive oil, more to taste
\n3. Kosher salt
\n4. Ground chile pepper, preferably Turkish or Aleppo
\n5. 2 rosemary branches
\n6. 1 small lemon, very thinly sliced
\n7. ¼cup sliced, pitted calamata or other good-quality black olives
    \n
    \nDirections:
        \n1. Heat oven to 450 degrees.
        \n\n2. Place fish in a baking dish, brush fillets with 1 teaspoon of oil and season with salt and chile pepper.
        \n\n3. Top each fillet with a rosemary branch and several slices of lemon. Drizzle remaining oil over lemon slices and sprinkle with additional salt. Scatter olives over fish and pan.
        \n\n4. Bake until just opaque, about 10 minutes. If lemon slices have not browned or singed (this will depend on how thinly you slice them), place pan under broiler for 1 to 2 minutes.
        \n\n5. Serve drizzled with more olive oil; sprinkle with more salt and chili, if desired.</string>
    <string name="halibut_servings">Servings: 2</string>
    <string name="halibut_servingsize">Serving Size: 1 fillet</string>
    <string name="halibut_calories">Calories: 200</string>
    <string name="halibut_time">Time: 10 minutes</string>
    <string name="chickenpie_name">Chicken Pot Pie</string>
    <string name="chickenpie_ingreds">Ingredients:\n1. 2 cups diced peeled potatoes
\n2. 1-3/4 cups sliced carrots
\n3. 1 cup butter, cubed
\n4. 2/3 cup chopped onion
\n5. 1 cup all-purpose flour
\n6. 1-3/4 teaspoons salt
\n7. 1 teaspoon dried thyme
\n8. 3/4 teaspoon pepper
\n9. 3 cups chicken broth
\n10. 1-1/2 cups whole milk
\n11. 4 cups cubed cooked chicken
\n12. 1 cup frozen peas
\n13. 1 cup frozen corn
\n14. 4 sheets refrigerated pie crust
    \n
    \nDirections:
    \n1. Preheat oven to 425°. Place potatoes and carrots in a large saucepan; add water to cover. Bring to a boil. Reduce heat; cook, covered, 8-10 minutes or until crisp-tender; drain.
    \n\n2. In a large skillet, heat butter over medium-high heat. Add onion; cook and stir until tender. Stir in flour and seasonings until blended. Gradually stir in broth and milk. Bring to a boil, stirring constantly; cook and stir 2 minutes or until thickened.
\n\n3. In a large bowl, combine chicken, peas, corn and potato-carrot mixture. Stir in broth mixture.
\n\n4. Unroll a pie crust into each of two 9-in. pie plates; trim crusts even with rims of plates. Add chicken mixture. Unroll remaining crusts; place over filling. Trim, seal and flute edges. Cut slits in tops.
\n\n5. Bake 35-40 minutes or until crust is lightly browned. Let stand 15 minutes before cutting.</string>
    <string name="chickenpie_servings">Servings: 8</string>
    <string name="chickenpie_servingsize">Serving Size: 1 slice</string>
    <string name="chickenpie_calories">Calories: 475</string>
    <string name="chickenpie_time">Time: 90 minutes</string>
    <string name="cauliflower_name">Cauliflower Soup</string>
    <string name="cauliflower_ingreds">Ingredients:\n1. 1 medium head cauliflower, broken into florets
\n2. 1 medium carrot, shredded
\n3. 1/4 cup chopped celery
\n4. 2-1/2 cups water
\n5. 2 teaspoons chicken bouillon or 1 vegetable bouillon cube
\n6. 3 tablespoons butter
\n7. 3 tablespoons all-purpose flour
\n8. 3/4 teaspoon salt
\n9. 1/8 teaspoon pepper
\n10. 2 cups 2% milk
\n11. 1 cup shredded cheddar cheese
\n12. 1/2 to 1 teaspoon hot pepper sauce, optional
    \n
    \nDirections:\n1. In a Dutch oven, combine the cauliflower, carrot, celery, water and bouillon. Bring to a boil. Reduce heat; cover and simmer for 12-15 minutes or until vegetables are tender (do not drain).
        \n\n2. In a large saucepan, melt butter. Stir in the flour, salt and pepper until smooth. Gradually add milk. Bring to a boil over medium heat; cook and stir for 2 minutes or until thickened. Reduce heat. Stir in the cheese until melted, adding hot pepper sauce if desired. Stir into the cauliflower mixture.</string>
    <string name="cauliflower_servings">Servings: 8</string>
    <string name="cauliflower_servingsize">Serving Size: 1 cup</string>
    <string name="cauliflower_calories">Calories: 160</string>
    <string name="cauliflower_time">Time: 30 minutes</string>
    <string name="spaghetti_name">Baked Spaghetti</string>
    <string name="spaghetti_ingreds">Ingredients:\n
    1. 1 cup chopped onion
\n2. 1 cup chopped green pepper
\n3. 1 tablespoon butter
\n4. 1 can (28 ounces) diced tomatoes, undrained
\n5. 1 can (4 ounces) mushroom stems and pieces, drained
\n6. 1 can (2-1/4 ounces) sliced ripe olives, drained
\n7. 2 teaspoons dried oregano
\n8. 1 pound ground beef, browned and drained, optional
\n9. 12 ounces spaghetti, cooked and drained
\n10. 2 cups shredded cheddar cheese
\n11. 1 can (10-3/4 ounces) condensed cream of mushroom soup, undiluted
\n12. 1/4 cup water
\n13. 1/4 cup grated Parmesan cheese
    \n
    \nDirections:
    \n1. In a large skillet, saute onion and green pepper in butter until tender. Add the tomatoes, mushrooms, olives, oregano and, if desired, ground beef. Simmer, uncovered, for 10 minutes.
    \n\n2. Place half of the spaghetti in a greased 13x9-in. baking dish. Layer with half of the vegetable mixture and 1 cup cheddar cheese. Repeat layers.
    \n\n3. In a small bowl, combine soup and water until smooth; pour over casserole. Sprinkle with Parmesan cheese. Bake, uncovered, at 350° until heated through, 30-35 minutes.</string>
    <string name="spaghetti_servings">Servings: 12</string>
    <string name="spaghetti_servingsize">Serving Size: 1 cup</string>
    <string name="spaghetti_calories">Calories: 239</string>
    <string name="spaghetti_time">Time: 60 minutes</string>
    <string name="chocolate_name">Peanut Butter Chocolate Dessert</string>
    <string name="chocolate_ingreds">Ingredients:
    \n1. 20 chocolate cream-filled chocolate sandwich cookies, divided
\n2. 2 tablespoons butter, softened
\n3. 1 package (8 ounces) cream cheese, softened
\n4. 1/2 cup peanut butter
\n5. 1-1/2 cups confectioners sugar, divided
\n6. 1 carton (16 ounces) frozen whipped topping, thawed, divided
\n7. 15 miniature peanut butter cups, chopped
\n8. 1 cup 2% milk
\n9. 1 package (3.9 ounces) instant chocolate fudge pudding mix
    \n
    \nDirections:
    \n1. Crush 16 cookies; toss with the butter. Press into an ungreased 9-in. square dish; set aside.
\n\n2. In a large bowl, beat the cream cheese, peanut butter and 1 cup confectioners sugar until smooth. Fold in half the whipped topping. Spread over crust. Sprinkle with peanut butter cups.
\n\n3. In another large bowl, beat the milk, pudding mix and remaining confectioners sugar on low speed for 2 minutes. Let stand for 2 minutes or until soft-set. Fold in remaining whipped topping.
\n\n4. Spread over peanut butter cups. Crush remaining cookies; sprinkle over the top. Cover and chill for at least 3 hours.</string>
    <string name="chocolate_servings">Servings: 16</string>
    <string name="chocolate_servingsize">Serving Size: 1 piece</string>
    <string name="chocolate_calories">Calories: 365</string>
    <string name="chocolate_time">Time: 20 minutes</string>
    <string name="shrimp_name">Shrimp Scampi</string>
    <string name="shrimp_ingreds">Ingredients:
    \n1. 3 to 4 garlic cloves, minced
\n2. 1/4 cup butter, cubed
\n3. 1/4 cup olive oil
\n4. 1 pound uncooked shrimp (31-40 per pound), peeled and deveined
\n5. 1/4 cup lemon juice
\n6. 1/2 teaspoon pepper
\n7. 1/4 teaspoon dried oregano
\n8. 1/2 cup grated Parmesan cheese
\n9. 1/4 cup dry bread crumbs
\n10. 1/4 cup minced fresh parsley
\n11. Hot cooked angel hair pasta
    \n
    \nDirections:
    \n1. In a 10-in. ovenproof skillet, saute garlic in butter and oil until fragrant. Add the shrimp, lemon juice, pepper and oregano; cook and stir until shrimp turn pink. Sprinkle with cheese, bread crumbs and parsley.
        \n\n2.Broil 6 in. from the heat for 2-3 minutes or until topping is golden brown. Serve with pasta.</string>
    <string name="shrimp_servings">Servings: 4</string>
    <string name="back_button">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="app_name">T h e  S e n s i t i v e  E n t r é e</string>
    <string name="app_name_login_one">The Sensitive</string>
    <string name="app_name_login_two">Entrée</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile Image</string>
    <string name="dairy">Dairy-free</string>
    <string name="peanut">Peanut-free</string>
    <string name="Wheat">Wheat-free</string>
    <string name="choose_dietary_preferences">Choose Dietary Preferences</string>
</resources>