<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/almost_white"
    tools:context=".Login">

  <Button
      android:id="@+id/loginButton"
      android:layout_width="178dp"
      android:layout_height="52dp"
      android:layout_marginStart="158dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="165dp"
      android:background="@color/dark_green"
      android:backgroundTint="@color/dark_green"
      android:onClick="onLoginClick"
      android:text="@string/login"
      android:textAlignment="center"
      android:textColor="@color/off_white"
      android:textSize="24sp"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.466"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/enterPassword"
      tools:text="@string/login"
      tools:visibility="visible" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="104dp"
      android:layout_marginTop="9dp"
      android:layout_marginEnd="105dp"
      android:text="@string/app_name_login_one"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="157dp"
      android:layout_marginEnd="158dp"
      android:text="@string/app_name_login_two"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/enterEmailAddress"
      android:layout_width="244dp"
      android:layout_height="60dp"
      android:layout_marginTop="18dp"
      android:autofillHints="username"
      android:ems="10"
      android:hapticFeedbackEnabled="true"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:textAlignment="center"
      android:textCursorDrawable="@color/black"
      app:layout_constraintEnd_toEndOf="@+id/enterPassword"
      app:layout_constraintStart_toStartOf="@+id/enterPassword"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <EditText
      android:id="@+id/enterPassword"
      android:layout_width="244dp"
      android:layout_height="60dp"
      android:layout_marginTop="15dp"
      android:autofillHints="password"
      android:ems="10"
      android:hapticFeedbackEnabled="true"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/enterEmailAddress" />

  <Button
      android:id="@+id/createAccountButton"
      android:layout_width="125dp"
      android:layout_height="36dp"
      android:layout_marginStart="132dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="134dp"
      android:backgroundTint="@color/almost_white"
      android:onClick="onCreateAccountClick"
      android:text="@string/create_account"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginButton"
      tools:text="@string/create_account" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="156dp"
      android:layout_height="134dp"
      android:layout_marginTop="120dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_light" />

</androidx.constraintlayout.widget.ConstraintLayout>