<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checboxDairy"
            android:layout_width="179dp"
            android:layout_height="59dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="116dp"
            android:text="@string/dairy"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxWheat"
            android:layout_width="179dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:text="@string/Wheat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/checboxDairy"
            app:layout_constraintStart_toStartOf="@+id/checboxDairy"
            app:layout_constraintTop_toBottomOf="@+id/checboxDairy" />

        <CheckBox
            android:id="@+id/checkBoxPeanut"
            android:layout_width="179dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:text="@string/peanut"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxWheat"
            app:layout_constraintStart_toStartOf="@+id/checkBoxWheat"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxWheat" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>