<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_light" />

    <EditText
        android:id="@+id/getLastName"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/getFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/getFirstName"
        app:layout_constraintTop_toBottomOf="@+id/getFirstName" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="185dp"
        android:layout_height="51dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/dark_green"
        android:text="Create Account"
        android:onClick="onClick"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/getConfirmPassword"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/getConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/getConfirmPassword" />

    <EditText
        android:id="@+id/getPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/getEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/getEmail"
        app:layout_constraintTop_toBottomOf="@+id/getEmail" />

    <EditText
        android:id="@+id/getFirstName"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/getConfirmPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/getPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/getPassword"
        app:layout_constraintTop_toBottomOf="@+id/getPassword" />

    <EditText
        android:id="@+id/getEmail"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/getLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/getLastName"
        app:layout_constraintTop_toBottomOf="@+id/getLastName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/dark_green"
        android:onClick="onClickBack"
        android:text="Back"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/registrationButton"
        app:layout_constraintStart_toStartOf="@+id/registrationButton"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton" />


</androidx.constraintlayout.widget.ConstraintLayout>